--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "@codesandbox/sandpack-react": "^2.13.5",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@docsly/react": "^1.8.6",
-    "@docusaurus/core": "^3.0.1",
-    "@docusaurus/module-type-aliases": "^3.0.1",
-    "@docusaurus/plugin-client-redirects": "^3.0.1",
-    "@docusaurus/preset-classic": "^3.0.1",
-    "@docusaurus/remark-plugin-npm2yarn": "^3.0.1",
-    "@docusaurus/theme-live-codeblock": "^3.0.1",
-    "@docusaurus/theme-mermaid": "3.1.1",
+    "@docusaurus/core": "^3.4.0",
+    "@docusaurus/module-type-aliases": "^3.4.0",
+    "@docusaurus/plugin-client-redirects": "^3.4.0",
+    "@docusaurus/preset-classic": "^3.4.0",
+    "@docusaurus/remark-plugin-npm2yarn": "^3.4.0",
+    "@docusaurus/theme-live-codeblock": "^3.4.0",
+    "@docusaurus/theme-mermaid": "^3.4.0",
     "@dytesdk/docs-ai-react": "^2.0.1",
     "@dytesdk/react-ui-kit": "^1.66.0",
     "@dytesdk/react-web-core": "file:modules/dytesdk-react-web-core-1.36.4-stripped.1.tgz",
@@ -53,7 +53,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@docusaurus/tsconfig": "3.0.1",
+    "@docusaurus/tsconfig": "^3.4.0",
     "@styled-icons/boxicons-logos": "^10.47.0",
     "@swc/core": "^1.3.42",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
