--- a/docsearch.config.json
+++ b/docsearch.config.json
@@ -1,6 +1,6 @@
 {
   "index_name": "docs",
-  "sitemap_urls": ["https://docs.dyte.io/sitemap.xml"],
+  "sitemap_urls": ["https://productdb.dev/sitemap.xml"],
   "start_urls": [
     {
       "url": "https://productdb.dev/guides",
