--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@docusaurus/remark-plugin-npm2yarn": "^3.4.0",
     "@docusaurus/theme-live-codeblock": "^3.4.0",
     "@docusaurus/theme-mermaid": "^3.4.0",
-    "@ProductDBsdk/docs-ai-react": "^2.0.1",
-    "@ProductDBsdk/react-ui-kit": "^1.66.0",
-    "@ProductDBsdk/react-web-core": "file:modules/ProductDBsdk-react-web-core-1.36.4-stripped.1.tgz",
-    "@ProductDBsdk/web-core": "file:modules/ProductDBsdk-web-core-1.31.0-stripped.1.tgz",
+    "@dytesdk/docs-ai-react": "^2.0.1",
+    "@dytesdk/react-ui-kit": "^1.66.0",
+    "@dytesdk/react-web-core": "file:modules/dytesdk-react-web-core-1.36.4-stripped.1.tgz",
+    "@dytesdk/web-core": "file:modules/dytesdk-web-core-1.31.0-stripped.1.tgz",
     "@fluentui/react-icons": "^2.0.204",
     "@headlessui/react": "^1.7.14",
     "@radix-ui/react-select": "^2.0.0",
